# hostmap

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  common.php  composer.json  flake.nix  history.php  index.html  index.php  justfile  module.nix  nix-diff.php  sqlx-prepare-migrations.sh
.sqlx/: query-08adaac23013998827038d3aaa5a1696c555ef107012386a8d25890c9999250e.json  query-0b053d5c043bdd70052fd909a030bf5506c8154bd66e99a16e614dc41adf94d3.json  query-1494f4878daf9ae5999f92aa441fc574f20c8d07a32914a296be059c461628ca.json  query-1d95b5f676ff50f685d91b65e66f33e5d6854c3862f67bb49a52424b33452aae.json  query-208c3e607704d313c27f32e597dda7ea802b4897cef29bc06e787af7b9af1f2f.json  query-2574922b4eda96aeca9141c5085229990705316eb495872be3055376da48405c.json  query-2b0d8fe0c131b65c5c4039851b086027610ade7aae65e790de46242d1d462599.json  query-349ca6474a9f72ac82c2bade417b7a953ea366fc711eea752027736e125c856f.json  query-34f6812cc26d580bc021e969571586c49e2d7e2fe3598d9176ba3d82e1fa8014.json  query-4191659210e8ce4e2a048343032c763c213fc0e6c08998b04d99492831d0f940.json  query-6d18aeb4600320a2bc35b10644add05cd22fddf7567d206623cceacff394462a.json  query-6e8aba7e2c97d4952eda5053e14b11fe92b0349c739a110556f5a7e15f13fd5f.json  query-7b66421e9fd137effc6659b9b178280effdc0b90bdd147c6c261e17135904354.json  query-9564f13988afdbac41a49e5f3c5164431a4db79d6504afcb297886e55ecdc5bc.json  query-9d16899b65e4af68053bd2cbf5e91e6b1b28090c87d75bffa5538ed7e527f332.json  query-a4cee542d4fb13c2ca9c3269a477ad63cb0d8c92185fde6914dc7b2502f233db.json  query-b7bb199a0fb6738c41969cd79a81c6d95b7c7d6b9c870ce4fee73fab7d14bd05.json  query-c0ad8d2d736f7aa673ccf8e4bdd2df81e3801eb15bb8f6b3dd369e833526c7b8.json  query-c9add553756f216375170d38649447fa0abc415aaf3c38e721496491b0b2eb09.json  query-cd1eb727bf5dd4eef7a9d85a5aaf0973a938b1fcba0c8ec6dcd42834d799688a.json  query-d72a66663653d140c287b65059b03ee7d9fb753839a4e4c11c87ccfb4e031183.json  query-e5e8edb66645bb722e8d3471f2f2b83050bd16f7876fe6a24d7807a34f02277a.json  query-e901354ce1fe0e28a1fdd5e7a35b79cdf4e0dae611743744e972886a029f4fb5.json  query-ef1c1d5c931a56230447fda75aa94d03ab690d59e993a1c686ecda3bf19c7f0f.json  query-f5031a77b7b100bee32ed97b5f45e0c204e47df5078c74171bd424444492ec65.json
assets/: styles.css
hostmap/: Cargo.toml
migrations/: 001_create-host-and-host-groups-table.down.sql  001_create-host-and-host-groups-table.up.sql  002_create-nix-git-mapping-table.down.sql  002_create-nix-git-mapping-table.up.sql  003_create-log-entry-table.down.sql  003_create-log-entry-table.up.sql  004_alter-host-add-updated-timestamp.up.sql  005_alter-nix-git-link-add-hostname.down.sql  005_alter-nix-git-link-add-hostname.up.sql  20250619195235_create-hostgroup-hostrow.down.sql  20250619195235_create-hostgroup-hostrow.up.sql  20250619195438_insert-fake-data.down.sql  20250619195438_insert-fake-data.up.sql  20250621212334_insert-more-fake-data.up.sql  20250909092542_create-log-entry-table.sql  20250909093042_create-hostgroup-hostrow.sql  20250909093542_insert-data.sql  20250911102639_create-host-and-host-groups-table.down.sql  20250911102639_create-host-and-host-groups-table.up.sql  20250912092542_create-log-entry-table.down.sql  20250912092542_create-log-entry-table.up.sql  20250930092412_create-nix-git-mapping-table.up.sql  20250930121007_alter-host-add-updated-timestamp.down.sql  20250930132412_create-nix-git-mapping-table.down.sql  20250930132412_create-nix-git-mapping-table.up.sql
migrations_dev/: 20250911102639_create-host-and-host-groups-table.down.sql  20250911102639_create-host-and-host-groups-table.up.sql  20250912092542_create-log-entry-table.down.sql  20250912092542_create-log-entry-table.up.sql  20250930121007_alter-host-add-updated-timestamp.down.sql  20250930132412_create-nix-git-mapping-table.down.sql  (+4 more)
scraper/: Cargo.toml
scraper/src/: main.rs  scraper.rs
scraper/test-assets/: minimalTargetList.json
(+134 files in other folders)
