[package]
name = "hostmap"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-extra = { version = "0.10.1", features = ["query"] }
axum = { version = "0.8.4", features = ["json", "macros"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = "0.12.23"
csv = "1.3.1"

