[package]
name = "hostmap"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20.0"
axum-extra = { version = "0.10.1", features = ["query"] }
axum = { version = "0.8.4", features = ["json", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
sqlx-cli = { version = "0.8.6", features = ["postgres"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

