[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
# serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tera = { version = "1.20.0", features = ["builtins"] }
# axum-extra = { version = "0.10.1", features = ["query"] }
# axum = { version = "0.8.4", features = ["json", "macros"] }
# sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
# tower-http = { version = "0.6.6", features = ["fs", "trace"] }
# chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
reqwest = { version = "0.12.23", features = ["json"] }
tracing = "0.1.41"
log = "0.4.28"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# anyhow = "1.0.99"
# thiserror = "2.0.16"
